# ckan-orcamento

./: .env.example  .gitignore  CONTRIBUTING.MD  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build-push.yml  build.yml  deploy-ckan.yml
ckan/: Dockerfile  Dockerfile.dev  ckan_dataset_schema.yaml
ckan/docker-entrypoint.d/: 02_setup_seplan.sh  03_setup_scheming.sh  04_setup_button.sh
nginx/: Dockerfile
nginx/setup/: default.conf
src/.cookiecutter_replay/: ckan_extension.json
src/ckanext-seplan/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
src/ckanext-seplan/.github/workflows/: test.yml
src/ckanext-seplan/ckanext/seplan/: plugin.py
src/ckanext-seplan/ckanext/seplan/assets/: script.js  webassets.yml
src/ckanext-seplan/ckanext/seplan/public/: custom.css
src/ckanext-seplan/ckanext/seplan/templates/: base.html  footer.html  header.html
src/ckanext-seplan/ckanext/seplan/templates/home/: index.html
src/ckanext-seplan/ckanext/seplan/templates/home/snippets/: about_text.html  groups.html  organizations.html  promoted.html  search.html
src/ckanext-seplan/ckanext/seplan/templates/scheming/package/: resource_read.html
src/ckanext-seplan/ckanext/seplan/tests/: test_plugin.py
